--- a/templates/myapp/create_new_campaign.html
+++ b/templates/myapp/create_new_campaign.html
@@ -1,30 +1,90 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
 {% block content %}
+<div class="container theme-showcase" role="main" style="font-family: arial;">
 
-<!-- <form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" />
-</form>
- -->
-            <form method="post" action="{% url 'newcampaign' %}">{% csrf_token %}
-      <div class="modal-body">
-        <p>
-          <label for="id_name">Campaign Name:</label>
-          <input type="text" name="name" class="form-control" maxlength="255" required="" id="id_name" value="{{form.instance.name}}">
+<div class="row">
+  <div class="col-md-6">
+    <h1 style="font-size: 40px">Create your Campaign</h1>
+  </div>
+</div>
+<nav class="o-stepbar">
+    <ol>
+        <li class="stepbar-item current">
+            <a class="stepbar-link" href="#" title="Step 1 : General Info">
+                <span class="step-number">1</span>
+                <span class="step-title">General Info</span>
+            </a>
+        </li>
+        <li class="stepbar-item">
+            <a class="stepbar-link" href="#" title="Step 2 : Aperiam" aria-current="step">
+                <span class="step-number">2</span>
+                <span class="step-title">Template</span>
+            </a>
+        </li>
+        <li class="stepbar-item next">
+            <a class="stepbar-link" href="#" title="Step 3 : Accusantinum">
+                <span class="step-number">3</span>
+                <span class="step-title">Customize</span>
+            </a>
+        </li>
+        <li class="stepbar-item next">
+            <a class="stepbar-link" href="#" title="Step 4 : Ipsam">
+                <span class="step-number">4</span>
+                <span class="step-title">Preview</span>
+            </a>
+        </li>
+        <li class="stepbar-item next">
+            <a class="stepbar-link" href="#" title="Step 5 : Delivery">
+                <span class="step-number">5</span>
+                <span class="step-title">Delivery</span>
+            </a>
+        </li>
+        <li class="stepbar-item next">
+            <a class="stepbar-link" href="#" title="Step 6 : Overview">
+                <span class="step-number">6</span>
+                <span class="step-title">Overview</span>
+            </a>
+        </li>
+    </ol>
+</nav>
+
+    <form method="post" action="">{% csrf_token %}
+      <div class="row" style="margin-top: 2%">
+        <div class="col-md-6">
+         <p>
+          <label for="id_name">Name of the campaign</label>
+          <input type="text" name="name" class="form-control" maxlength="255" required="" id="id_name" value="{{form.instance.name}}" data-container="body" data-toggle="popover" data-placement="right" data-content="{% trans 'This name will not appear in the object of email.' %}">
         </p>
-                        {% if form.errors %}
-                <div class="alert alert-primary" role="alert">
-			        {{form.errors.as_text}}
-			    </div>
-			        {% endif %}
+              {% if form.errors %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert" style="margin:0;padding: 0">
+              {{form.errors.as_text}}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin:0;padding: 0">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              {% endif %}
       <p>
-        <label for="id_description">Description:</label> 
-        <textarea name="description" class="form-control" cols="40" rows="10" required="" id="id_description">{{form.instance.description}}
-        </textarea>
-      </p>
+        <label for="id_description">Description</label> 
+        <textarea name="description" class="form-control" cols="40" rows="8" required="" id="id_description" data-container="body" data-toggle="description_popover" data-placement="right" data-content="{% trans 'This description will help you find the campaign later.' %}">{% if form.instance.description != None %}
+          {{form.instance.description}}
+          {% endif %}</textarea>
+      </p>          
+        </div>
+<div class="col-md-9 offset-md-3 col-12">
+        <a href="" class="btn btn-secondary" style="margin-left: 50%;margin-bottom: 3%">{% trans 'Cancel' %}</a>
+        <a href="" class="btn btn-secondary disabled" style="margin-bottom: 3%">{% trans 'Previous' %}</a>
+        <a href="" class="btn btn-secondary" style="margin-bottom: 3%">{% trans 'Save as draft' %}</a>
+        <button type="submit" class="btn btn-primary" style="margin-bottom: 3%">{% trans 'Next' %}</button>  
+</div>
       </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-    </form>
+    </form>    
 
+</div>
+<script type="text/javascript">
+  $(function () {
+  $('[data-toggle="popover"]').popover()
+  $('[data-toggle="description_popover"]').popover()
+})
+</script>
 {% endblock  %}
