--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,8 @@
             </button>
             <div class="navbar-collapse justify-content-between collapse" id="collapsing-navbar" style="margin-bottom: .7rem">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#" aria-current="page">Campaign</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" aria-current="page">Campaigns</a></li>
+                    <!-- <li class="nav-item active"><a class="nav-link" href="#" aria-current="page">Campaigns</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#">Templates</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Lists</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Reports</a></li>
