--- a/templates/myapp/create_new_campaign.html
+++ b/templates/myapp/create_new_campaign.html
@@ -49,7 +49,7 @@
     </ol>
 </nav>
 
-    <form method="post" action="">{% csrf_token %}
+    <form method="post" action="" id="campaign_form">{% csrf_token %}
       <div class="row" style="margin-top: 2%">
         <div class="col-md-6">
          <p>
@@ -72,9 +72,9 @@
       </p>          
         </div>
 <div class="col-md-9 offset-md-3 col-12">
-        <a href="" class="btn btn-secondary" style="margin-left: 50%;">{% trans 'Cancel' %}</a>
+        <a href="{% url 'home' 'dashboard' %}" class="btn btn-secondary" style="margin-left: 50%;">{% trans 'Cancel' %}</a>
         <a href="" class="btn btn-secondary disabled">{% trans 'Previous' %}</a>
-        <a href="" class="btn btn-secondary">{% trans 'Save as draft' %}</a>
+        <button type="submit" class="btn btn-secondary" id='create_cmapaign_save_draft'>{% trans 'Save as draft' %}</button>
         <button type="submit" class="btn btn-primary">{% trans 'Next' %}</button>  
 </div>
       </div>
@@ -85,6 +85,18 @@
   $(function () {
   $('[data-toggle="popover"]').popover()
   $('[data-toggle="description_popover"]').popover()
+})
+$('#create_cmapaign_save_draft').click(function(e){
+    e.preventDefault();
+    url = window.location.href
+        $.ajax({
+            url : url,
+            type : 'POST',
+            data : $('#campaign_form').serialize(),
+            success: function(data){
+              window.location.replace('/dashboard')
+            }
+        });
 })
 </script>
 {% endblock  %}
