--- a/templates/myapp/template.html
+++ b/templates/myapp/template.html
@@ -65,7 +65,7 @@
 <div class="row" style="margin-top: 10%">
           <a href="{% url 'home' 'dashboard' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
         <a href="" id="template_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
-        <a href="" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
+        <a href="/dashboard" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
         <a href="" id="template_next" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</a>  
         <!-- <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</button>   -->
 </div>
