--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,11 +10,11 @@
             </button>
             <div class="navbar-collapse justify-content-between collapse" id="collapsing-navbar" style="margin-bottom: .7rem">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#" aria-current="page">Campaigns</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" aria-current="page">{% trans 'Campaigns' %}</a></li>
                     <!-- <li class="nav-item active"><a class="nav-link" href="#" aria-current="page">Campaigns</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="#">Templates</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Lists</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Reports</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">{% trans 'Templates' %}</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">{% trans 'Lists' %}</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">{% trans 'Reports' %}</a><span class="glyphicon glyphicon-triangle-left"></span></li>
                 </ul>
           <ul class="navbar-nav">
           <li class="nav-item">
