--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -15,9 +15,17 @@
                             <label for="id_email" style="color: #fff">{% trans 'Email' %}</label>
                 <input type="email" name="email" class="form-control" aria-describedby="" maxlength="254" required="" id="id_email" style="background-color: transparent;color: #fff;max-width: 216px;max-height: 40px;height: 40px">
                       </div>
+               {% if form.errors %}
+                <div class="alert alert-primary alert-dismissible fade show" role="alert" style="margin:0;padding: 0">
+              {{form.errors.as_text}}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin:0;padding: 0">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              {% endif %}
 
-                      <div class="form-group">
-              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="color: white;padding-right: 1rem">Cancel</a>
+                      <div class="form-group" style="margin-top: 1rem">
+              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="color: white;padding-right: 1rem">{% trans 'Cancel' %}</a>
                         <button type="submit" class="btn btn-inverse btn-primary" style="padding: .25rem .55rem;margin-left: 3rem">{% trans 'Recover' %}</button>
 
                   </div>
