--- a/templates/myapp/delivery.html
+++ b/templates/myapp/delivery.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1 style="font-size: 40px">{% trans 'Add an entry' %}</h1>
+    <h1 style="font-size: 40px;color:white">{% trans 'Add an entry' %}</h1>
   </div>
 </div>
 <nav class="o-stepbar">
