--- a/templates/myapp/editor.html
+++ b/templates/myapp/editor.html
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1 style="font-size: 40px">{% trans 'Create your Campaign' %}</h1>
+    <h1 style="font-size: 40px">{% trans 'Customize your campaign' %}</h1>
   </div>
 </div>
 <nav class="o-stepbar">
