--- a/templates/myapp/template.html
+++ b/templates/myapp/template.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1 style="font-size: 40px">Create your Campaign</h1>
+    <h1 style="font-size: 40px">{% trans 'Select your template' %}</h1>
   </div>
 </div>
 <nav class="o-stepbar">
@@ -55,9 +55,9 @@
 </div>
 <div class="row">
   <a href="" id="blank_template">
-  <div class="card" style="width: 15rem;height: 9rem">
+  <div class="card" style="width: 15rem;height: 9rem;border: 2px solid #000">
   <div class="card-body">
-    <h5 class="card-title" style="text-align: center;padding-top: 30px">BLANK</h5>
+    <h5 class="card-title" style="text-align: center;padding-top: 30px;">BLANK</h5>
   </div>
 </div>
 </a>
