--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <tr>
       <td>{{campaign.name}}</td>
       <td>{{campaign.status}}</td>
-      <td style="text-align: right"><a href="{% url 'updatecampaign' campaign.slug %}"><i class="icon-Pencil"></i></a><i class="icon-trash"></i></td>
+      <td style="text-align: right"><a {% if campaign.draft_stage == 1 %} href="{% url 'updatecampaign' campaign.slug %}" {% elif campaign.draft_stage == 2 %} href="{% url 'template' campaign.slug %}" {% elif campaign.draft_stage == 3 %} href="{% url 'editor' campaign.slug %}" {% endif %}><i class="icon-Pencil"></i></a><i class="icon-trash"></i></td>
     </tr>
     {% endfor %}
     <tr>
