--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
     <!-- Boosted CSS -->
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
     <link rel="stylesheet" href="{% static 'css/boosted.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-select.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/bootstrap-select.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/thumbnail.css' %}">
 
          <!--[if lt IE 9]>
         <link rel="stylesheet" href="css/bootstrap-orangeIE82015.css" />
