--- a/templates/myapp/create_new_campaign.html
+++ b/templates/myapp/create_new_campaign.html
@@ -51,10 +51,11 @@
 </nav>
 
     <form method="post" action="" id="campaign_form">{% csrf_token %}
-      <div class="row" style="margin-top: 2%">
+      <!-- <div class="row" style="margin-top: 2%"> -->
+        <div class="row">
         <div class="col-md-6">
          <p>
-          <label for="id_name">Name of the campaign</label>
+          <label for="id_name">{% trans 'Name of the campaign' %}</label>
           <input type="text" name="name" class="form-control" maxlength="255" required="" id="id_name" value="{{form.instance.name}}" data-container="body" data-toggle="popover" data-placement="right" data-content="{% trans 'This name will not appear in the object of email.' %}">
           <!-- <input type="text" name="form_type" id="id_form_type" value="{{request.path}}"> -->
         </p>
@@ -69,17 +70,48 @@
                 </div>
               {% endif %}
         </p>
-      <p>
-        <label for="id_description">Description</label> 
-        <textarea name="description" class="form-control" cols="40" rows="8" required="" id="id_description" data-container="body" data-toggle="description_popover" data-placement="right" data-content="{% trans 'This description will help you find the campaign later.' %}">{% if form.instance.description != None %}{{form.instance.description}}{% endif %}</textarea>
-      </p>          
         </div>
-<div class="col-md-9 offset-md-3 col-12">
+        <div class="col-md-6">
+         <p>
+          <label for="id_subject">{% trans 'Subject of the campaign*' %}</label>
+          <input type="text" name="subject" class="form-control" maxlength="255" required="" id="id_subject" value="{{form.instance.subject}}">
+          <!-- <input type="text" name="form_type" id="id_form_type" value="{{request.path}}"> -->
+        </p>
+        </div>          
+        </div>
+
+        <div class="row">
+        <div class="col-md-6">
+         <p>
+          <label for="id_authors">{% trans 'Authors' %}{% trans '(separate by a ; and 10 max)' %}</label>
+          <input type="text" name="authors" class="form-control" maxlength="255" required="" id="id_authors" value="{{request.user.get_full_name}}">
+        </p>
+        </div>
+        <div class="col-md-6">
+         <p>
+          <label for="id_sender_email">{% trans 'Sender Email*' %}</label>
+          <input type="text" name="sender_email" class="form-control" maxlength="255" required="" id="id_sender_email" value="{{request.user.email}}">
+        </p>
+        </div>          
+        </div>
+        <div class="row">
+          
+        <div class="col-md-12">
+      <!-- <p> -->
+        <label for="id_description">Description</label> 
+        <textarea name="description" class="form-control" cols="40" rows="4" id="id_description" data-container="body" data-toggle="description_popover" data-placement="right" data-content="{% trans 'This description will help you find the campaign later.' %}">{% if form.instance.description != None %}{{form.instance.description}}{% endif %}</textarea>
+      <!-- </p>           -->
+        </div>
+
+        </div>
+        <div class="row" style="margin-top: 5%">
+
+      <div class="col-md-9 offset-md-3 col-12">
         <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 50%;">{% trans 'Cancel' %}</a>
         <a href="" class="btn btn-secondary disabled">{% trans 'Previous' %}</a>
         <button type="submit" class="btn btn-secondary" id='create_cmapaign_save_draft'>{% trans 'Save as draft' %}</button>
         <button type="submit" class="btn btn-primary">{% trans 'Next' %}</button>  
-</div>
+      </div>
       </div>
     </form>    
 
@@ -93,10 +125,6 @@ $('#create_cmapaign_save_draft').click(function(e){
     e.preventDefault();
     url = window.location.href;
     data = $('#campaign_form').serialize()+'&form_type=ajax_request'
-    console.log(data)
-    // $('id_form_type').attr('value','ajax_request')
-    // $('id_form_type').val('ajax_request')
-    // alert("sfsfsf",$('id_form_type').val())
         $.ajax({
             url : url,
             type : 'POST',
