--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -44,7 +44,7 @@
                       </div>
 
                       <div class="form-group">
-              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="color: white;padding-right: 1rem">Cancel</a>
+              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="padding-right: 1rem">Cancel</a>
                         <button type="submit" class="btn btn-inverse btn-primary" style="padding: .25rem .55rem;margin-left: 3rem">{% trans 'Reset' %}</button>
 
                   </div>
