--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -26,7 +26,7 @@
               {% endif %}
 
                       <div class="form-group" style="margin-top: 1rem">
-              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="color: white;padding-right: 1rem">{% trans 'Cancel' %}</a>
+              <a href="{% url 'login' %}" class="btn btn-inverse btn-dark" style="padding-right: 1rem">{% trans 'Cancel' %}</a>
                         <button type="submit" class="btn btn-inverse btn-primary" style="padding: .25rem .55rem;margin-left: 3rem">{% trans 'Recover' %}</button>
 
                   </div>
